Changed the title for the index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Contact Us Form</title>
 	<link rel="stylesheet" href="style.css">
 	<!-- include Google hosted jQuery Library -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
