changed some file names

--- a/example.html
+++ b/example.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0080)http://ajtroxell.com/demos/simple-php-jquery-and-ajax-powered-contact-form-demo/ -->
-<html class=" js no-touch svg inlinesvg svgclippaths no-ie8compat" lang="en" style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html class=" js no-touch svg inlinesvg svgclippaths no-ie8compat" lang="en" style="">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="initial-scale=1.0">
-	<title>
-		  Simple PHP, jQuery, and AJAX Powered Contact Form Demo - AJ Troxell	</title>
+	<title>Simple PHP, jQuery, and AJAX Powered Contact Form Demo - AJ Troxell</title>
 
 	<!-- CSS -->
-			<style type="text/css">
-			form {
+<style type="text/css">
+form {
     margin:0
 }
 form label {
@@ -88,9 +89,9 @@ fieldset {
 </head>
 <body>
 
-			<!-- Demo -->
-										<h1>Simple PHP, jQuery, and AJAX Powered Contact Form Demo</h1>
-				<form id="contact" name="contact" method="post" novalidate="novalidate">
+<!-- Demo -->
+<h1>Simple PHP, jQuery, and AJAX Powered Contact Form Demo</h1>
+<form id="contact" name="contact" method="post" novalidate="novalidate">
     <fieldset>
         <label for="name" id="name">Name<span class="required">*</span>
         </label>
